--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -3,12 +3,12 @@ name: YAML Linter
 on:
   push:
     paths:
-    - '*.yml'
+    - '**.yml'
   pull_request:
     branches:
     - master
     paths:
-    - '*.yml'
+    - '**.yml'
 
 jobs:
   build:
