--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -20,3 +20,5 @@ jobs:
       uses: actions/checkout@v1
     - name: YAML Linter
       uses: ibiqlik/action-yamllint@v1.0.0
+      with:
+        config_file: '.github/yaml-lint.yml'
